@@ -1,5 +1,7 @@
 = master
 
+* Make unveiler still pledge if SimpleCov is loaded, but update pledge promises (jeremyevans)
+
 * Fix roda pg_disconnect plugin to correctly error if error_handler is already loaded (jeremyevans)
 
 = 1.0.0 (2020-11-09)
